--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,4 +46,6 @@
     -->
   </body>
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
